--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <section id="activities">
             <h2>Extra Curricular Activities ⚽</h2>
             <ul>
-                <p><b>NSS Volunteer (2021 - 2024):</b> Selected as NSS Volunteer and organized many social service camps over rural areas.</p>
+                <p><b>NSS Volunteer (2021 - 2024):</b><br> Selected as NSS Volunteer and organized many social service camps over rural areas.</p>
                 <p><b>Captain - College Cricket Team (2022 - 2024):</b>
                         <p>First prize in Anna University Zonal Cricket Tournament - 2023</p>
                         <p>Third prize in Anna University Zonal Cricket Tournament - 2022</p>
